--- a/me.html
+++ b/me.html
@@ -1,1 +1,49 @@
-<h1>Hello World - PF</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Pierre Faiz’s Page</title>
+    <link rel="stylesheet" type="text/css" href="me.css">
+</head>
+<body>
+    <header>
+        <h1>Pierre Faiz</h1>
+    </header>
+
+    <p><a href="mailto:pierreafaiz@lewisu.edu">pierreafaiz@lewisu.edu</a></p>
+    <p>Discord: pierref1_22765</p>
+    <img src="me.png" alt="Pierre Faiz" class="profile-img">
+    <h2>Introduction</h2>
+    <p>
+        Hi, my name is Pierre Faiz and I’m a freshman here at Lewis. I come from a family of 
+        four, including my brother, mom, dad, and me. My brother is 21 and a senior at Illinois State University.
+        I’m majoring in Computer Science and have some coding experience from a CS class in 
+        high school. I currently have no minor.
+    </p>
+
+    <h2>What I Hope to Learn in this Course</h2>
+    <ul>
+        <li>How to code in Java</li>
+        <li>How to code in Python</li>
+        <li>A deeper understanding of lists and sequencing</li>
+        <li>How computers are built</li>
+        <li>Software engineering/Cybersecurity skills</li>
+    </ul>
+
+    <h2>My Favorite Hobby / Activity</h2>
+    <ul>
+        <li>
+            Basketball 
+            (<a href="https://kids.britannica.com/kids/article/basketball/352831" target="_blank">More Info On Basketball</a>)
+        </li>
+        <li>
+            Swimming 
+            (<a href="https://www.medicinenet.com/swimming/article.htm" target="_blank">More Info On Swimming</a>)
+        </li>
+    </ul>
+
+    <h2>Fun Fact</h2>
+    <p>
+        I was born in Egypt and can speak Arabic.
+    </p>
+</body>
+</html>
