--- a/me.html
+++ b/me.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Pierre Faiz’s Page</title>
-    <link rel="stylesheet" type="text/css" href="css/me.css">
+    <link rel="stylesheet" type="text/css" href="me.css">
 </head>
 <body>
     <div class="container">
